--- a/polaroids/index.html
+++ b/polaroids/index.html
@@ -4,63 +4,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Álbum de fotos  - Polaroids</title>
+    <title>Album de fotos - Polaroids</title>
 </head>
 <body>
     <header>
         <h1>Minhas fotos 2024</h1>
     </header>
+
+    <!-- album -->
     <main id="album">
+        <!-- Primeira coluna -->
         <section class="coluna">
+            <!-- imagem 1 -->
             <section class="products">
-                <img src="Imagens/Natal.png" alt="Natal">
-                <p>foto 1 <br>01/02/21</p>
+                <img src="imagens/Natal.png" alt="gato">
+                <p>Foto 1 <br> 10/02/2024 </p>
             </section>
-            <section class="coluna">
-                <section class="products">
-                    <img src="Imagens/Natal.png" alt="Natal">
-                    <p>foto 2 <br>01/02/21</p>
-                </section>
-                <section class="coluna">
-                    <section class="products">
-                <img src="Imagens/Natal.png" alt="Natal">
-                        <p>foto 3 <br>01/02/21</p>
-                    </section>
+
+            <!-- imagem 2 -->
+            <section class="products">
+                <img src="imagens/Natal.png" alt="gato">
+                <p>Foto 2 <br> 10/02/2024 </p>
+            </section>
+
+            <!-- imagem 3 -->
+            <section class="products">
+                <img src="imagens/Natal.png" alt="gato">
+                <p>Foto 3 <br> 10/02/2024 </p>
+            </section>
         </section>
-        <section class="coluna 1">
+
+        <!-- Segunda coluna -->
+        <section class="coluna">
+            <!-- imagem 4 -->
             <section class="products">
-                <img src="Imagens/Natal.png" alt="Natal">
-                <p>foto 4 <br>01/02/21</p>
+                <img src="imagens/Natal.png" alt="gato">
+                <p>Foto 4 <br> 10/02/2024 </p>
             </section>
-            <section class="coluna">
-                <section class="products">
-                    <img src="Imagens/Natal.png" alt="Natal">
-                    <p>foto 5 <br>01/02/21</p>
-                </section>
-                <section class="coluna">
-                    <section class="products">
-                <img src="Imagens/Natal.png" alt="Natal">
-                        <p>foto 6 <br>01/02/21</p>
-                    </section>
-                    <section class="coluna 1">
-                        <section class="products">
-                            <img src="Imagens/Natal.png" alt="Natal">
-                            <p>foto 7 <br>01/02/21</p>
-                        </section>
-                        <section class="coluna">
-                            <section class="products">
-                                <img src="Imagens/Natal.png" alt="Natal">
-                                <p>foto 8 <br>01/02/21</p>
-                            </section>
-                            <section class="coluna">
-                                <section class="products">
-                            <img src="Imagens/Natal.png" alt="Natal">
-                                    <p>foto 9 <br>01/02/21</p>
-                                </section>
+
+            <!-- imagem 5 -->
+            <section class="products">
+                <img src="imagens/Natal.png" alt="gato">
+                <p>Foto 5 <br> 10/02/2024 </p>
+            </section>
+
+            <!-- imagem 6 -->
+            <section class="products">
+                <img src="imagens/Natal.png" alt="gato">
+                <p>Foto 6 <br> 10/02/2024 </p>
+            </section>
+        </section>
+
+        <!-- Terceira coluna -->
+        <section class="coluna">
+            <!-- imagem 7 -->
+            <section class="products">
+                <img src="imagens/Natal.png" alt="gato">
+                <p>Foto 7 <br> 10/02/2024 </p>
+            </section>
+
+            <!-- imagem 8 -->
+            <section class="products">
+                <img src="imagens/Natal.png" alt="gato">
+                <p>Foto 8 <br> 10/02/2024 </p>
+            </section>
+
+            <!-- imagem 9 -->
+            <section class="products">
+                <img src="imagens/Natal.png" alt="gato">
+                <p>Foto 9 <br> 10/02/2024 </p>
+            </section>
         </section>
     </main>
+
     <footer>
         <p>ALBUM SENAI ALBUM SENAI</p>
-    </footer>
+    </footer>    
 </body>
 </html>
